Fix overflow x error

--- a/test.css
+++ b/test.css
@@ -1,3 +1,7 @@
+/* * {
+  overflow-x: hidden;
+} */
+
 body {
   margin: 0;
   overflow-y: scroll;
@@ -32,6 +36,20 @@ h4 {
   color: #4f5461;
 }
 
+.wrapper {
+  display: grid;
+  grid-template-columns: minmax(10px, 1fr) minmax(355px, 10fr) minmax(10px, 1fr);
+  grid-template-rows: 100px auto;
+  justify-items: center;
+  width: 100vw;
+  /* height: 100vh; */
+  height: 3000px;
+  background-image: url(/images/footer-back-mobile.jpg);
+  background-repeat: no-repeat;
+  background-position: center bottom;
+  background-size: 100% 670px;
+}
+
 .header-image {
   position: absolute;
   top: 0;
@@ -42,20 +60,6 @@ h4 {
   background-repeat: no-repeat;
   background-size: 100%;
   z-index: -100;
-}
-
-.wrapper {
-  display: grid;
-  grid-template-columns: minmax(10px, 1fr) minmax(355px, 10fr) minmax(10px, 1fr);
-  grid-template-rows: 100px auto;
-  justify-items: center;
-  width: 100vw;
-  /* height: 100vh; */
-  height: 2100px;
-  background-image: url(/images/footer-back-mobile.jpg);
-  background-repeat: no-repeat;
-  background-position: center bottom;
-  background-size: 100% 670px;
 }
 
 .nav {
@@ -195,7 +199,7 @@ a img {
 
 .portfolio-item {
   width: auto;
-  height: 480px;
+  height: 400px;
   border: 1px solid rgba(0, 0, 0, 0.05);
   box-sizing: border-box;
   border-radius: 10px;
@@ -283,13 +287,13 @@ a img {
   color: #ffffff;
   border: 0 solid none;
   border-radius: 60px;
-  width: 193px;
+  /* width: 193px; */
   height: 59px;
 }
 
 .project-info {
   opacity: 100;
-  width: 405px;
+  width: 100%;
   height: 286px;
 }
 
@@ -307,15 +311,13 @@ a img {
 
 .technologies {
   position: relative;
-  top: 440px;
-  left: 25px;
+  top: 350px;
+  /* left: 25px; */
 }
 
 .project-btn {
   position: relative;
-  top: 480px;
-  left: 25px;
-  width: 340px;
+  top: 390px;
 }
 
 .source-live {
